added new stuff

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
 
     <header>
-      <h1>☕ Welcome to THE LAVISH</h1>
+      <h1>Welcome to THE LAVISH</h1>
       <p>Your daily dose of freshly brewed happiness!</p>
     </header>
 
@@ -53,7 +53,7 @@
     </section>
 
     <footer>
-      <p>📍 Visit us: Main Street, Coffeevilla | ☎ 123-456-7456</p>
+      <p>📍 Visit us: Main Street, Coffeevilla ,123-456-7456</p>
     </footer>
   </body>
 </html>
