--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <section class="contact-section">
-      <h2>Contact Our Café</h2>
+      <h2>Contact Our Cafe</h2>
       <p>We'd love to hear from you! Send us a message.</p>
 
       <form id="contactForm">
