--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <li><a href="menu.html">Menu</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
+
+      <button class="themeBtn" id="btn">Theme</button>
     </nav>
 
     <header>
@@ -55,5 +57,6 @@
     <footer>
       <p>📍 Visit us: Main Street, Coffeevilla ,123-456-7456</p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
