added css style

--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
         <li><a href="#about">About Us</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
+           <button class="themeBtn" id="btn">Theme</button>
     </nav>
 
   
@@ -90,7 +91,6 @@
 </div>
 </div>
 </section>
-    <!-- <button id="scrollToTopBtn" onclick="scrollToTop">Scroll to Top</button>
-    <script src="about.js"></script> -->
+    <script src="about.js"></script>
   </body>
 </html>
