--- a/menu.html
+++ b/menu.html
@@ -17,6 +17,7 @@
       <button onclick="filterMenu('espresso')">Espresso</button>
       <button onclick="filterMenu('coldbrew')">Cold Brew</button>
       <button onclick="filterMenu('latte')">Latte</button>
+           <button class="themeBtn" id="btn">Theme
     </div>
 
     <section class="menu">
@@ -97,6 +98,6 @@
       </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="menu.js"></script>
   </body>
 </html>
