added images,darkmode/lightmode,and modal in home page

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <section id="about" class="about-us">
       <h1>About THE LAVISH CAFE</h1>
       <p>
-        Our café is more than just a place to get your daily cup of coffee. It's
+        Our cafe is more than just a place to get your daily cup of coffee. Its
         a sanctuary where friends gather, stories are shared, and every cup is
         brewed with passion and care.
       </p>
@@ -50,7 +50,7 @@
   <h2>Meet Our Team</h2>
   <div class="team-list">
     <div class="team-member">
-      <h3>shyam aryal</h3>
+      <h3>shreeya neupane</h3>
       <p><strong>Founder</strong></p>
       <p>Passionate about crafting the perfect cup and creating a warm, welcoming atmosphere.</p>
     </div>
@@ -87,8 +87,11 @@
   <div class="gallery-item">
  <img src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkoJfpfRPFMBMn3_fOGxkgFJcj5LUovG13Hw&s">
 </div>
- <img src = "https://img8.pandahall.com/photos/9/2/200_250_92916c3d-97c5-4353-b52b-65c6e678ff75.jpg">
+<div class="gallery-item">
+ <img src = "https://th.bing.com/th/id/OIP.6Hye0HI1zPxaUEkEYH86GAHaE8?w=234&h=150&c=7&r=10&o=10&dpr=1.3&pid=1.7&rm=3">
 </div>
+<div class="gallery-item">
+  <img src="https://th.bing.com/th/id/OIP._3zA5i7ew6m0VBG_3uRMegHaE8?w=234&h=150&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3"
 </div>
 </section>
     <script src="about.js"></script>
