--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <body>
     <section class="contact-section">
       <h2>Contact Our Cafe</h2>
-      <p>We'd love to hear from you! Send us a message.</p>
+      <p>We'd love to hear from you! Send us a message</p>
 
       <form id="contactForm">
         <div class="form-group">
@@ -32,7 +32,7 @@
           <textarea
             id="message"
             rows="5"
-            placeholder="Write your message..."
+            placeholder="Write your message."
             required
           ></textarea>
         </div>
