--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
       <button onclick="filterMenu('espresso')">Espresso</button>
       <button onclick="filterMenu('coldbrew')">Cold Brew</button>
       <button onclick="filterMenu('latte')">Latte</button>
-           <button class="themeBtn" id="btn">Theme
+      <button class="themeBtn" id="btn">Theme</button>
     </div>
 
     <section class="menu">
@@ -98,6 +98,6 @@
       </div>
     </section>
 
-    <script src="menu.js"></script>
+    <script src="menu.js" defer></script>
   </body>
 </html>
