removed defer and added .

--- a/menu.html
+++ b/menu.html
@@ -98,6 +98,6 @@
       </div>
     </section>
 
-    <script src="menu.js" defer></script>
+    <script src="menu.js"></script>
   </body>
 </html>
