--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
  <img src = "https://th.bing.com/th/id/OIP.6Hye0HI1zPxaUEkEYH86GAHaE8?w=234&h=150&c=7&r=10&o=10&dpr=1.3&pid=1.7&rm=3">
 </div>
 <div class="gallery-item">
-  <img src="https://th.bing.com/th/id/OIP._3zA5i7ew6m0VBG_3uRMegHaE8?w=234&h=150&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3"
+  <img src="https://th.bing.com/th/id/OIP._3zA5i7ew6m0VBG_3uRMegHaE8?w=234&h=150&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3">
 </div>
 </section>
     <script src="about.js"></script>
