fixed the css and added the media quereis to make it responsive

--- a/about.html
+++ b/about.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us - THE LAVISH CAFE</title>
     <link rel="stylesheet" href="about.css" />
+ 
   </head>
   <body class="about-page">
 </head>
 <body>
 
-    <nav class="sidebar">
-      <div class="logo">
-        <a href="#">THE LAVISH   CAFE</a>
-      </div>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#menu">Menu</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-           <button class="themeBtn" id="btn">Theme</button>
-    </nav>
+  <div class="nav-container">
+      <nav class="navbar">
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <button class="themeBtn" id="btn">Theme</button>
+      </nav>
+    </div>
 
   
     <section id="about" class="about-us">
