changed bg color to match more

--- a/about.html
+++ b/about.html
@@ -27,8 +27,7 @@
     <section id="about" class="about-us">
       <h1>About THE LAVISH CAFE</h1>
       <p>
-        Our cafe is more than just a place to get your daily cup of coffee. Its
-        a sanctuary where friends gather, stories are shared, and every cup is
+        Our cafe is more than just a place to get your daily cup of coffee with beautiful view. where friends gather, stories are shared, and every cup is
         brewed with passion and care.
       </p>
 
@@ -37,8 +36,8 @@
         <div class="story-text">
           <h2>Our Story</h2>
           <p>
-            Founded in 2022, "THE LAVISH CAFE "began with the dream of creating
-            a warm, inviting space for coffee lovers. Our mission is simple:
+            Founded in 2025, "THE LAVISH CAFE "began with the dream of creating
+            a warm, inviting space for coffee lovers. Our mission is simple to
             serve the best coffee in town and create a space where people can
             relax, unwind, and enjoy life simple pleasures.
           </p>
