--- a/about.html
+++ b/about.html
@@ -28,7 +28,11 @@
       <h1>About THE LAVISH CAFE</h1>
       <p>
         Our cafe is more than just a place to get your daily cup of coffee with beautiful view. where friends gather, stories are shared, and every cup is
-        brewed with passion and care.
+        brewed with passion and care.More than just your daily caffeine stop, our cafe is a space where warmth meets elegance. Nestled in a setting with a beautiful view, it's a place where friends gather, stories unfold, and moments turn into memories.
+
+Every cup we serve with, crafted and care, and shared with a sense of community. Whether you're here for a quiet morning alone or a lively catch-up with friends, Lavish Coffee Cafe offers the perfect blend of comfort, conversation, and creativity.
+
+
       </p>
 
       
@@ -39,7 +43,7 @@
             Founded in 2025, "THE LAVISH CAFE "began with the dream of creating
             a warm, inviting space for coffee lovers. Our mission is simple to
             serve the best coffee in town and create a space where people can
-            relax, unwind, and enjoy life simple pleasures.
+            relax, unwind, and enjoy life simple pleasures.What started as a humble idea quickly blossomed into a haven for coffee lovers, friends, creatives, and dreamers. With cozy interiors, a beautiful view, and the aroma of freshly ground beans, The Lavish Cafe became a place where stories are shared, connections are made, and simple pleasures are celebrated.
           </p>
         </div>
         <section class="story-section">
