added footer changes color

--- a/about.html
+++ b/about.html
@@ -29,8 +29,7 @@
       <p>
         Our cafe is more than just a place to get your daily cup of coffee with beautiful view. where friends gather, stories are shared, and every cup is
         brewed with passion and care.More than just your daily caffeine stop, our cafe is a space where warmth meets elegance. Nestled in a setting with a beautiful view, it's a place where friends gather, stories unfold, and moments turn into memories.
-
-Every cup we serve with, crafted and care, and shared with a sense of community. Whether you're here for a quiet morning alone or a lively catch-up with friends, Lavish Coffee Cafe offers the perfect blend of comfort, conversation, and creativity.
+        Every cup we serve with, crafted and care, and shared with a sense of community. Whether you're here for a quiet morning alone or a lively catch-up with friends, Lavish Coffee Cafe offers the perfect blend of comfort, conversation, and creativity.
 
 
       </p>
@@ -97,6 +96,9 @@ Every cup we serve with, crafted and care, and shared with a sense of community.
   <img src="https://th.bing.com/th/id/OIP._3zA5i7ew6m0VBG_3uRMegHaE8?w=234&h=150&c=7&r=0&o=7&dpr=1.3&pid=1.7&rm=3">
 </div>
 </section>
+<footer>
+      <p class="footer-text" style="margin:0">@2025 The Lavish Cafe | Kathmandu Nepal</p>
+    </footer>
     <script src="about.js"></script>
   </body>
 </html>
