--- a/contact.html
+++ b/contact.html
@@ -41,5 +41,8 @@
         <p id="formMessage" class="success-message"></p>
       </form>
     </section>
+    <footer>
+      <p>@2025 The Lavish Cafe | Kathmandu Nepal</p>
+    </footer>
   </body>
 </html>
