--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
       <button onclick="filterMenu('all')">All</button>
       <button onclick="filterMenu('espresso')">Espresso</button>
       <button onclick="filterMenu('coldbrew')">Cold Brew</button>
-      <button onclick="filterMenu('latte')">Latte</button>
+      <button onclick="filterMenu('Mocha')">Mocha</button>
       <button class="themeBtn" id="btn">Theme</button>
     </div>
 
@@ -97,7 +97,9 @@
         </div>
       </div>
     </section>
-
+    <footer>
+      <p>@2025 The Lavish Cafe | Kathmandu Nepal</p>
+    </footer>
     <script src="menu.js"></script>
   </body>
 </html>
