--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="contact.css" />
   </head>
   <body>
+    <nav class="navbar">
+      <div class="nav-links-container">
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
     <section class="contact-section">
       <h2>Contact Our Cafe</h2>
       <p>We'd love to hear from you! Send us a message</p>
