--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="menu.css" />
   </head>
   <body>
+    <nav class="menu-navbar">
+      <ul class="menu-nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
     <header>
       <h1>Our Coffee Menu</h1>
       <p>handcrafted coffee items for every mood</p>
