added theme button on contact page

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
           <li><a href="menu.html">Menu</a></li>
           <li><a href="contact.html">Contact</a></li>
           </ul>
+          <button class="themeBtn" id="btn">Theme</button>
         </nav>
     <section class="contact-section">
       <h2>Contact Our Cafe</h2>
@@ -53,5 +54,6 @@
     <footer>
       <p>@2025 The Lavish Cafe | Kathmandu Nepal</p>
     </footer>
+ <script src="script.js"></script>
   </body>
 </html>
