changes filter menu

--- a/menu.html
+++ b/menu.html
@@ -21,10 +21,10 @@
     </header>
 
     <div class="filters">
-      <button onclick="filterMenu('all')">All</button>
-      <button onclick="filterMenu('espresso')">Espresso</button>
-      <button onclick="filterMenu('coldbrew')">Cold Brew</button>
-      <button onclick="filterMenu('Mocha')">Mocha</button>
+      <button>All</button>
+      <button>Espresso</button>
+      <button>Cold Brew</button>
+      <button>Mocha</button>
       <button class="themeBtn" id="btn">Theme</button>
     </div>
 
