added theme logo

--- a/about.html
+++ b/about.html
@@ -19,7 +19,11 @@
           <li><a href="menu.html">Menu</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-        <button class="themeBtn" id="btn">Theme</button>
+        <button class="themeBtn" id="btn">
+
+
+           <img src="darkmode.png" id="png" />
+        </button>
       </nav>
     </div>
 
