--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
           <li><a href="menu.html">Menu</a></li>
           <li><a href="contact.html">Contact</a></li>
           </ul>
-          <button class="themeBtn" id="btn">Theme</button>
+          <button class="Theme" id="btn">Theme</button>
         </nav>
     <section class="contact-section">
       <h2>Contact Our Cafe</h2>
