--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>THE LAVISH CAFE</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <img
@@ -22,7 +26,9 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
-      <button class="themeBtn" id="btn">Theme</button>
+      <button class="themeBtn" id="btn">
+        <img src="darkmode.png" id="png" />
+      </button>
     </nav>
 
     <header>
