--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,9 @@
       <button>Espresso</button>
       <button>Cold Brew</button>
       <button>Mocha</button>
-      <button class="themeBtn" id="btn">Theme</button>
+      <button class="themeBtn" id="btn">
+        <img src="darkmode.png" id="png" />
+      </button>
     </div>
 
     <section class="menu">
