added div on about us

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
   
     <section id="about" class="about-us">
       <h1>About THE LAVISH CAFE</h1>
-      <p>
+      <p class="para">
         Our cafe is more than just a place to get your daily cup of coffee with beautiful view. where friends gather, stories are shared, and every cup is
         brewed with passion and care.More than just your daily caffeine stop, our cafe is a space where warmth meets elegance. Nestled in a setting with a beautiful view, it's a place where friends gather, stories unfold, and moments turn into memories.
         Every cup we serve with, crafted and care, and shared with a sense of community. Whether you're here for a quiet morning alone or a lively catch-up with friends, Lavish Coffee Cafe offers the perfect blend of comfort, conversation, and creativity.
@@ -41,7 +41,7 @@
       <div class="story" id="story">
         <div class="story-text">
           <h2>Our Story</h2>
-          <p>
+          <p class="para" >
             Founded in 2025, "THE LAVISH CAFE "began with the dream of creating
             a warm, inviting space for coffee lovers. Our mission is simple to
             serve the best coffee in town and create a space where people can
